--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ a {
     text-decoration: none;
 }
 
+
 .links a{
     color: #E5E7EB;
     font-size: 18px;
@@ -79,6 +80,7 @@ button {
     border-radius: 5px;
     padding: 7px 25px;
     font-size: 15px;
+    border: none;
 }
 
 .information-header {
@@ -128,4 +130,25 @@ blockquote {
     font-size: 24px;
     font-weight: 1000;
     color: #1f2937;
+}
+
+.signup-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #3882F6;
+    color: white;
+    border-radius: 15px;
+    margin:  50px 150px;
+    gap: 30px;
+    padding: 5px 20px;
+}
+
+h3 {
+    font-size: 24px;
+    font-weight: 1000;
+}
+
+.signup-container button {
+    border: 1px solid white;
 }
